--- a/question.html
+++ b/question.html
@@ -1,108 +1,204 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Pay by UPI</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Select Question Paper</title>
   <style>
-    :root{
-      --card-bg:#fff; --accent:#1565c0; --accent-2:#2e7d32; --muted:#6b7280;
+    body {
+      font-family: 'Segoe UI', Tahoma, sans-serif;
+      background: linear-gradient(135deg, #e3f2fd, #f5f7fa);
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
-    body{
-      font-family: "Segoe UI", Roboto, Arial, sans-serif;
-      background: linear-gradient(180deg,#f3f7fb,#ffffff);
-      display:flex; align-items:center; justify-content:center; min-height:100vh; margin:0;
+
+    .container {
+      background: #fff;
+      padding: 30px;
+      border-radius: 14px;
+      max-width: 500px;
+      width: 100%;
+      box-shadow: 0 8px 25px rgba(0,0,0,0.12);
+      animation: fadeIn 0.6s ease-in-out;
     }
-    .card{
-      width:100%; max-width:420px; background:var(--card-bg); padding:20px; border-radius:12px;
-      box-shadow:0 10px 30px rgba(12,24,60,0.08); text-align:center;
+
+    h2 {
+      text-align: center;
+      margin-bottom: 25px;
+      color: #1565c0;
+      font-size: 22px;
     }
-    h3{ margin:0 0 10px; color:var(--accent); }
-    p.note{ color:var(--muted); margin:6px 0 18px; font-size:14px; }
-    .qr-row{ display:flex; gap:16px; align-items:center; justify-content:center; margin-bottom:14px; }
-    .qr-row img{ width:160px; height:160px; border-radius:8px; border:1px solid #e6eef8; }
-    .info{ text-align:left; margin:10px 0 16px; }
-    .info .line{ display:flex; justify-content:space-between; padding:8px 12px; border-radius:8px; background:#fbfdff; border:1px solid #eef6ff; margin-bottom:8px; }
-    .info .label{ color:var(--muted); font-size:13px; }
-    .buttons{ display:flex; gap:10px; flex-wrap:wrap; }
-    .btn{
-      flex:1 1 48%; padding:12px; border-radius:8px; border:none; cursor:pointer; font-weight:600;
-      color:#fff; background:var(--accent); box-shadow:0 6px 18px rgba(21,101,192,0.12);
+
+    .section {
+      margin-bottom: 25px;
     }
-    .btn.secondary{ background:var(--accent-2); box-shadow:0 6px 18px rgba(46,125,50,0.12); }
-    .small{ font-size:13px; color:var(--muted); margin-top:10px;}
+
+    .section-title {
+      margin-bottom: 12px;
+      font-size: 16px;
+      font-weight: 600;
+      color: #444;
+    }
+
+    .options {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 12px;
+    }
+
+    .option {
+      flex: 1 1 calc(50% - 12px);
+      background: #f0f4f8;
+      border: 2px solid transparent;
+      padding: 14px;
+      text-align: center;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: 500;
+      transition: all 0.3s ease;
+      user-select: none;
+      color: #333;
+    }
+
+    .option:hover {
+      background: #e3f2fd;
+      border-color: #1e88e5;
+    }
+
+    .option.active {
+      background: #1e88e5;
+      color: #fff;
+      border-color: #1565c0;
+    }
+
+    button {
+      width: 100%;
+      padding: 14px;
+      font-size: 16px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: 600;
+      display: none;
+      transition: background 0.3s ease;
+    }
+
+    #payBtn {
+      background: #f57c00;
+      color: #fff;
+    }
+    #payBtn:hover {
+      background: #ef6c00;
+    }
+
+    #openPdfBtn {
+      background: #2e7d32;
+      color: #fff;
+    }
+    #openPdfBtn:hover {
+      background: #1b5e20;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
   </style>
 </head>
 <body>
+  <div class="container">
+    <h2>Chela Mary Public School</h2>
 
-  <div class="card" id="upiCard">
-    <h3>Chela Mary Public School — Pay ₹100</h3>
-    <p class="note">Secure UPI payment. Fixed amount ₹100 for question paper access.</p>
-
-    <div class="qr-row">
-      <img id="qrImg" src="" alt="UPI QR code" />
+    <!-- Class Selection -->
+    <div class="section">
+      <div class="section-title">Select Class:</div>
+      <div class="options" id="classOptions">
+        <div class="option" data-class="9">Class 9</div>
+        <div class="option" data-class="10">Class 10</div>
+      </div>
     </div>
 
-    <div class="info">
-      <div class="line"><div class="label">UPI ID</div><div id="upiIdText">your-upi@bank</div></div>
-      <div class="line"><div class="label">Receiver</div><div id="receiverName">Receiver Name</div></div>
-      <div class="line"><div class="label">Amount</div><div>₹100</div></div>
-      <div class="line"><div class="label">Order Note</div><div id="orderNote">ORDER-XXXX</div></div>
+    <!-- Paper Selection -->
+    <div class="section" id="paperSection" style="display:none;">
+      <div class="section-title">Select Question Paper:</div>
+      <div class="options" id="paperOptions"></div>
     </div>
 
-    <div class="buttons">
-      <button class="btn" id="openUpiBtn">Open UPI App</button>
-      <button class="btn secondary" id="copyBtn">Copy UPI ID</button>
-    </div>
-
-    <p class="small">Mobile users: tap "Open UPI App". Desktop users: scan the QR with your phone.</p>
+    <!-- Payment -->
+    <button id="payBtn">💳 Pay & Unlock</button>
+    <button id="openPdfBtn">📄 Open Question Paper</button>
   </div>
 
   <script>
-    // ====== CONFIGURE ======
-    const UPI_ID = "your-upi@bank";  // <<<<<< Replace with your UPI ID
-    const RECEIVER_NAME = "Chela Mary Public School"; 
-    const AMOUNT = "100"; // Fixed amount ₹100
-    const ORDER_ID = "CMPS-" + Date.now().toString().slice(-6);
+    const classOptions = document.querySelectorAll("#classOptions .option");
+    const paperSection = document.getElementById("paperSection");
+    const paperOptions = document.getElementById("paperOptions");
+    const payBtn = document.getElementById("payBtn");
+    const openPdfBtn = document.getElementById("openPdfBtn");
 
-    function enc(v){ return encodeURIComponent(v || ""); }
+    let selectedClass = null;
+    let selectedPaper = null;
 
-    const upiParams = [
-      "pa=" + enc(UPI_ID),
-      "pn=" + enc(RECEIVER_NAME),
-      "tn=" + enc("Order " + ORDER_ID),
-      "am=" + enc(AMOUNT),
-      "cu=INR"
-    ].join("&");
+    // Sample PDFs
+    const pdfs = {
+      "9": [
+        {name: "Maths Paper", url: "pdf/class9-maths.pdf"},
+        {name: "Science Paper", url: "pdf/class9-science.pdf"}
+      ],
+      "10": [
+        {name: "Maths Paper", url: "pdf/class10-maths.pdf"},
+        {name: "Science Paper", url: "pdf/class10-science.pdf"}
+      ]
+    };
 
-    const upiDeepLink = "upi://pay?" + upiParams;
+    // Handle class selection
+    classOptions.forEach(opt => {
+      opt.addEventListener("click", () => {
+        classOptions.forEach(o => o.classList.remove("active"));
+        opt.classList.add("active");
+        selectedClass = opt.dataset.class;
 
-    // Update UI
-    document.getElementById("upiIdText").innerText = UPI_ID;
-    document.getElementById("receiverName").innerText = RECEIVER_NAME;
-    document.getElementById("orderNote").innerText = ORDER_ID;
+        // Load papers
+        paperOptions.innerHTML = "";
+        pdfs[selectedClass].forEach(p => {
+          const div = document.createElement("div");
+          div.classList.add("option");
+          div.innerText = p.name;
+          div.dataset.url = p.url;
+          paperOptions.appendChild(div);
 
-    // Generate QR code
-    const qrPayload = encodeURIComponent(upiDeepLink);
-    const qrUrl = `https://chart.googleapis.com/chart?chs=300x300&cht=qr&chl=${qrPayload}&choe=UTF-8`;
-    document.getElementById("qrImg").src = qrUrl;
+          div.addEventListener("click", () => {
+            document.querySelectorAll("#paperOptions .option").forEach(o => o.classList.remove("active"));
+            div.classList.add("active");
+            selectedPaper = div.dataset.url;
+            payBtn.style.display = "block";
+            openPdfBtn.style.display = "none";
+          });
+        });
 
-    // Open UPI App
-    document.getElementById("openUpiBtn").addEventListener("click", () => {
-      window.location.href = upiDeepLink;
-      setTimeout(() => { window.open(upiDeepLink, "_blank"); }, 500);
+        paperSection.style.display = "block";
+      });
     });
 
-    // Copy UPI ID
-    document.getElementById("copyBtn").addEventListener("click", async function(){
-      try {
-        await navigator.clipboard.writeText(UPI_ID);
-        this.innerText = "Copied ✓";
-        setTimeout(()=> this.innerText = "Copy UPI ID", 1500);
-      } catch (e) {
-        alert("Copy failed — manually copy: " + UPI_ID);
+    // Fake Payment
+    payBtn.addEventListener("click", () => {
+      alert("✅ Payment Successful (Demo)");
+      payBtn.style.display = "none";
+      openPdfBtn.style.display = "block";
+    });
+
+    // Open PDF
+    openPdfBtn.addEventListener("click", () => {
+      if (selectedPaper) {
+         window.location.href = "payment.html";
       }
     });
   </script>
 </body>
 </html>
+
+
